# GitTop

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DOCUMENTATION.md  README.md  README.txt  RELEASING.md  ROADMAP.md
.github/workflows/: aur.yml  chocolatey.yml  ci.yml  docs.yml  release.yml  scoop.yml  winget.yml
bucket/: gittop.json
docs/: ARCHITECTURE.md  BRANCHING.md  PIPELINES.md  RELEASING.md
packaging/: .gitignore
packaging/aur/: PKGBUILD
packaging/aur/stable-bin/: PKGBUILD  gittop.install
packaging/chocolatey/: gittop.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/innosetup/: gittop.iss
packaging/scoop/: gittop.json
packaging/wix/: License.rtf  main.wxs
scripts/: install.sh  test-pkgbuild.sh
src/: main.rs  settings.rs  tray.rs
src/cache/: disk.rs  mod.rs
src/github/: auth.rs  client.rs  keyring.rs  mod.rs  session.rs  subject_details.rs  types.rs
src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/resources/: gittop.desktop
src/specs/: mock_notifications.rs
src/ui/: app.rs  icons.rs  mod.rs  theme.rs  window_state.rs
src/ui/screens/: login.rs  mod.rs  notifications.rs
src/ui/screens/notifications/: engine.rs  group.rs  helper.rs  messages.rs  mod.rs  screen.rs  sidebar.rs  sidebar_state.rs  states.rs
src/ui/screens/notifications/view/: bulk.rs  content.rs  group.rs  header.rs  mod.rs  sidebar.rs  sidebar_state.rs  states.rs
src/ui/screens/settings/: components.rs  messages.rs  mod.rs  screen.rs
src/ui/screens/settings/rule_engine/: components.rs  explain_decision.rs  inspector.rs  messages.rs  mod.rs  rules.rs  screen.rs
src/ui/screens/settings/rule_engine/tabs/: account.rs  account_rules.rs  mod.rs  org.rs  overview.rs  schedule.rs  time.rs  type_rules.rs
src/ui/screens/settings/tabs/: accounts.rs  appearance.rs  behavior.rs  command_center.rs  general.rs  mod.rs  network_proxy.rs  notifications.rs  power_mode.rs
src/ui/widgets/: mod.rs  notification_item.rs
src/ui/widgets/power/: details_panel.rs  mod.rs  status_bar.rs  top_bar.rs
wix/: License.rtf  main.wxs
www/: config.toml
www/content/: _index.md
www/content/dev/: ARCHITECTURE.md  BRANCHING.md  PIPELINES.md  RELEASING.md  _index.md
www/content/features/: _index.md  accessibility.md  accounts.md  power-mode.md  rules.md
www/sass/: _sidebar.scss  style.scss
www/templates/: base.html  docs.html  index.html  section.html
