[package]
name = "gittop"
version = "0.1.0"
edition = "2021"
description = "A beautiful native GitHub notification manager - no browser engine required"
authors = ["Amar"]
license = "MIT"

[dependencies]
# Iced GUI framework - using software renderer (tiny-skia) for minimal memory footprint
iced = { version = "0.14.0-dev", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "image",
    "svg",
    "advanced",
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client for GitHub API
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }

# Error handling
thiserror = "2"

# Secure credential storage
keyring = { version = "3", features = [
    "sync-secret-service",
    "windows-native",
    "apple-native",
] }

# Open URLs in browser
open = "5"

# Image loading for avatars
image = "0.25"

# SVG icons - Lucide icon set for CPU-efficient rendering
icondata_lu = "0.1"
icondata_core = "0.1"

# Cross-platform directories
dirs = "6.0.0"

# System tray
tray-icon = "0.21.2"

# Single instance (Windows named mutex)
single-instance = "0.3"

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Windows-specific APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

# macOS-specific APIs (placeholder for future native integrations)
[target.'cfg(target_os = "macos")'.dependencies]
# objc2 = "0.5"  # Uncomment when implementing native macOS features

# Linux-specific APIs (placeholder for future native integrations)
[target.'cfg(target_os = "linux")'.dependencies]
# x11 = "2.21"   # Uncomment when implementing X11 window activation
# wayland-client = "0.31"  # Uncomment for Wayland support

# FreeBSD-specific APIs (placeholder for future native integrations)
[target.'cfg(target_os = "freebsd")'.dependencies]
# Similar to Linux, would use X11 or other display protocols

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
