[package]
name = "GitTop"
version = "0.1.4"
edition = "2024"
description = "Why spin up a browser just to check your GitHub notifications?"
authors = ["AmarBego"]
license = "AGPL-3.0-only"

[package.metadata.wix]
wxs = ["packaging/wix/main.wxs"]

[[bin]]
name = "gittop"
path = "src/main.rs"


[dependencies]
# Iced GUI framework - using software renderer (tiny-skia) for minimal memory footprint
# Base features shared across all platforms
iced = { version = "0.14.0-dev", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "image",
    "svg",
    "wgpu",
] }


# Iced additional widgets - context menus
iced_aw = { version = "0.13", default-features = false, features = [
    "context_menu",
] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client for GitHub API
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }

# Error handling
thiserror = "2"

# Open URLs in browser
open = "5"

# SVG icons - Lucide icon set for CPU-efficient rendering
icondata_lu = "0.1"
icondata_core = "0.1"

# Cross-platform directories
dirs = "6.0.0"

# UUID generation for rule IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Embedded database for caching
sled = "0.34"

# System tray
tray-icon = "0.21.2"
image = { version = "0.25", default-features = false, features = [
    "ico",
    "png",
] }

# Single instance (Windows named mutex)
single-instance = "0.3"

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Windows-specific APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
tauri-winrt-notification = "0.7"
keyring = { version = "3", features = ["windows-native"] }

# macOS-specific APIs
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
keyring = { version = "3", features = ["apple-native"] }

# Linux-specific APIs
[target.'cfg(target_os = "linux")'.dependencies]
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wayland",
    "x11",
] }
notify-rust = "4"
keyring = { version = "3", features = ["sync-secret-service"] }
# GTK for tray-icon initialization
gtk = "0.18"

# FreeBSD-specific APIs
[target.'cfg(target_os = "freebsd")'.dependencies]
iced = { version = "0.14.0-dev", default-features = false, features = [
    "wayland",
    "x11",
] }
notify-rust = "4"
keyring = { version = "3", features = ["sync-secret-service"] }
# GTK for tray-icon initialization
gtk = "0.18"

# Build dependencies for Windows icon embedding
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Use bacon for development
[profile.dev]
opt-level = 1
debug = true
incremental = true
